# backend/swagger.yaml
@@ -136,13 +136,20 @@ components:
           enum: [Todo, Doing, Done]
     Technology:
       type: object
-
       required:
         - 'tech_name'
       properties:
         tech_name:
           type: string
           example: 'PHP'
+    Avatar:
+      type: object
+      required:
+        - 'img_link'
+      properties:
+        img_link:
+          type: string
+          example: 'https://i.imgur.com/GCvrcOH.png'
 
 paths:
   /users/register:
@@ -1239,6 +1246,75 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Technology'
+        500:
+          description: Server error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+  /avatars:
+    get:
+      summary: Get all avatars
+      tags:
+        - Avatar
+      responses:
+        200:
+          description: Avatars successfully retrieved
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Avatar'
+        500:
+          description: Server error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+    post:
+      summary: Create new avatar
+      tags:
+        - Avatar
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Avatar'
+      responses:
+        200:
+          description: Avatar successfully created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Avatar'
+        500:
+          description: Server error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+
+  /avatars/randomAvatar:
+    get:
+      summary: Get random avatar
+      tags:
+        - Avatar
+      responses:
+        200:
+          description: Avatar successfully retrieved
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Avatar'
         500:
           description: Server error
           content:
